--- a/gan/gan.ipynb
+++ b/gan/gan.ipynb
@@ -31,12 +31,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7de0e310",
+   "metadata": {},
+   "source": [
+    "Chapter 12: Generative Deep Learning from the book Deep Learning with Python by Francois Chollet.\n",
+    "\n",
+    "- 2015: Google DeepDream\n",
+    "- 2016: turn photos into paintings of various styles\n",
+    "- 2016: experimental Short movie, Sunspring, directed using a script from a LSTM\n",
+    "\n",
+    "Ai is not about replacing our own intelligence with something else, it is about bringing into our lives and work more intelligence, intelligence of a different kind. More augmented intelligence than artifiical intelligence."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4ad5f106",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
